--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,11 @@
   <div class="gallery">
     <h1>author: {{this.author}}</h1>
     <h2>link: {{this.link}}</h2>
+    <img src="{{this.link}}" alt="">
     <h3>description: {{this.description}}</h3>
     <h3>ID: {{this.id}}</h3>
   </div>
 {{/each}}
+
+
 
