--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,24 @@
 html{
-  background-color: blue;
+  background-color: white;
+}
+
+#header{
+  text-align: center;
+  font:grey;
+}
+
+#content{
+  text-align: center;
+}
+
+#picture{
+  text-align: center;
+}
+
+#author{
+  text-align: center;
+}
+
+#link{
+  text-align: center;
 }
