--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -5,11 +5,14 @@
 
 
   <div class="gallery">
-    <h1>AUTHOR: {{author}}</h1>
-    <h2>LINK: {{link}}</h2>
+    {{!-- <h1>AUTHOR: {{author}}</h1>
+    <h2>LINK: {{link}}</h2> --}}
     <img src="{{link}}" alt="">
-    <h3>DESCRIPTION: {{description}}</h3>
-    <h3>ID: {{id}}</h3>
+    {{!-- <h3>{{description}}</h3> --}}
+    <div id="description">
+      {{description}}
+    </div>
+    {{!-- <h3>ID: {{id}}</h3> --}}
     <form action="/gallery/{{id}}?_method=DELETE" method="POST" >
     <button type="submit">DELETE</button>
     </form>
