--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -13,7 +13,8 @@
       {{description}}
     </div>
     {{!-- <h3>ID: {{id}}</h3> --}}
-    <form action="/gallery/{{id}}?_method=DELETE" method="POST" >
-    <button type="submit">DELETE</button>
-    </form>
+   
+    <a href="/gallery/{{id}}/edit">edit</a>
   </div>
+
+  
