--- a/views/galleryNew.hbs
+++ b/views/galleryNew.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>NEW GALLERY</h1>
+  <h1>Upload Photo</h1>
   <form action="/gallery" method="Post">
     <label for="Post-name">AUTHOR</label>
     <input id="authorID" type="text" name="author">
