--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
     <h1>{{this.author}}</h1>
     </div> --}}
     <div id="link">
-    <a href="/gallery/{{id}}">Click for more information</a>
+    <a href="/gallery/{{id}}">~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</a>
     </div>
     {{!-- <div id="id">{{id}}</div> --}}
   </div>
