--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,13 @@
 html {
   background-color: white; }
 
+h1 {
+  color: grey; }
+
 #header {
-  text-align: center;
-  font: grey; }
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center; }
 
 #content {
   text-align: center; }
@@ -16,3 +20,23 @@ html {
 
 #link {
   text-align: center; }
+
+.topnav {
+  background-color: #333333;
+  overflow: hidden; }
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  text-align: center; }
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black; }
+
+.topnav a:hover {
+  background-color: #4CAF50;
+  color: white; }
