--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,15 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gallery</title>
   <link href='/css/style.css' rel='stylesheet' media='screen'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
-  
+  <div class="topnav">
+    <a class='active' href='/gallery'>HOME</a>
+    <a class='active' href='/gallery/new'>UPLOAD</a>
+    <a class='active' href='/user/new'>REGISTER</a>
+    <a class='active' href='/user/login'>LOGIN</a>
+    <a class='active' href='/logout'>LOGOUT</a>
+  </div>
+
   <div id="header">
   <h1>_ARCHITEKT</h1>
-  </div id='content'>
-  {{{body}}}
+  </div>
 
+  
+  {{{body}}}
 </body>
 
 </html>
