--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,8 @@
-  
-  
-  <h1>REGISTER</h1>
 
-  <form action="/register" method="POST">
+
+<h1>LOGIN</h1>
+
+  <form action="/login" method="POST">
     <label for="Put-name">username:</label>
     <input id="usernameID" type="text" placeholder="{{username}}" name="username">
     <label for="Put-name">password:</label>
