hidden upload nav bar option, css added, mobile & desktop

--- a/views/gallery.hbs
+++ b/views/gallery.hbs
@@ -7,14 +7,19 @@
   <div class="gallery">
     {{!-- <h1>AUTHOR: {{author}}</h1>
     <h2>LINK: {{link}}</h2> --}}
+  
+    <div id="image">
     <img src="{{link}}" alt="">
+    </div>
+
     {{!-- <h3>{{description}}</h3> --}}
     <div id="description">
       {{description}}
     </div>
     {{!-- <h3>ID: {{id}}</h3> --}}
-   
+   <div id="edit">
     <a href="/gallery/{{id}}/edit">edit</a>
+   </div>
   </div>
 
   
