--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 
 
+
 {{#each collection}}
   <div class="gallery">
     <div id="picture">
@@ -9,11 +10,11 @@
     <h1>{{this.author}}</h1>
     </div> --}}
     <div id="link">
-    <a href="/gallery/{{id}}">~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</a>
+      <p>{{this.author}}</p>
+      <a href="/gallery/{{id}}">www.fantasticnorway.no</a>
     </div>
     {{!-- <div id="id">{{id}}</div> --}}
   </div>
 {{/each}}
-
 
 
