--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,35 @@
+html, body {
+  box-sizing: border-box; }
+
+body {
+  display: flex;
+  justify-content: space-around;
+  display: inline-block;
+  align-items: center;
+  height: 100%;
+  flex-wrap: wrap;
+  margin: 0px;
+  background-image: url("/assets/cork-wallet.png"); }
+
 html {
   background-color: white; }
+
+#image {
+  padding-left: 100px;
+  padding-right: 100px; }
+
+#edit {
+  padding-left: 100px; }
 
 h1 {
   color: grey; }
 
+#footer {
+  text-align: center; }
+
 #header {
-  font-weight: bold;
+  font-size: 70px;
+  font-weight: bolder;
   font-family: 'Open Sans', sans-serif;
   text-align: center; }
 
@@ -13,13 +37,23 @@ h1 {
   text-align: center; }
 
 #picture {
+  padding-left: 100px;
+  padding-right: 100px;
   text-align: center; }
 
 #author {
   text-align: center; }
 
+#description {
+  padding-left: 100px;
+  padding-right: 100px;
+  font-family: 'Open Sans', sans-serif; }
+
 #link {
-  text-align: center; }
+  color: grey;
+  padding-left: 100px;
+  text-align: left;
+  padding-bottom: 20px; }
 
 .topnav {
   background-color: #333333;
@@ -40,3 +74,29 @@ h1 {
 .topnav a:hover {
   background-color: #4CAF50;
   color: white; }
+
+@media (min-width: 1025px) {
+  .gallery {
+    display: flex;
+    flex-direction: column; }
+  html, body {
+    margin: 0;
+    width: 100%; }
+  #link {
+    display: block; }
+  #image {
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px; }
+  #description {
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px; }
+  #picture {
+    text-align: center; }
+  #link {
+    text-align: center;
+    padding-left: 0px;
+    padding-right: 0px; }
+  #header {
+    font-size: 60px; } }
