--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,9 +24,12 @@
 
   <div id="header">
   <h1>_ARCHITEKT</h1>
+    <p id='headerPara'>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovative stops. Free Artchitect WordPress Theme</p>
   </div>
 
+
   {{{body}}}
+
 
 </body>
 
