css edits. to do list: edit link add to nav bar with if/else display like upload. refactor div layouts for css on single page detail display. change mobile display

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,20 @@ body {
   margin: 0px;
   background-image: url('/assets/cork-wallet.png');
 }
+input[type=text]{
+  color:black;
+  font-family: 'Open Sans', sans-serif;
+}
+#form{
+  background-color: black;
+}
+form.input{
+  background-color:black;
+}
+input.text{
+  background-color:black;
+
+}
 html{
   background-color: white;
 }
