--- a/views/galleryEdit.hbs
+++ b/views/galleryEdit.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  
+  <div id="editContent">
   <h1>EDIT GALLERY</h1>
   <form action="/gallery/{{id}}?_method=PUT" method="POST">
     <label for="Put-name">AUTHOR</label>
@@ -26,7 +26,7 @@
     <button type="submit">DELETE</button>
     </form>
     </div>
-
+  </div>
 </body>
 
 </html>
