--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,14 +22,25 @@
     <a class='active' href='/logout'>LOGOUT</a>
   </div>
 
-  <div id="header">
+  <div id="content">
+
+
+
+
+
+  <div id="headerTitle">
   <h1>_ARCHITEKT</h1>
+  </div>
+
+  <div id="headerPara">
     <p id='headerPara'>Welcome to our online portfolio, we are a small group of passionate designers and architects, looking to change and create amazing digital images to inspire others to follow in our innovative stops. Free Artchitect WordPress Theme</p>
   </div>
 
 
+
   {{{body}}}
 
+  </div>
 
 </body>
 
